# figures_openGl_sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/app/: main.cpp
src/geometry/: Circle.cpp  Circle.h  Color.h  Point2D.h  Rectangle.cpp  Rectangle.h  RegularPolygon.cpp  RegularPolygon.h  Shape.h  ShapeFactory.cpp  ShapeFactory.h  Triangle.cpp  Triangle.h
src/render/: ICanvas.h  OpenGLCanvas.cpp  OpenGLCanvas.h  Window.cpp  Window.h
src/scene/: Palette.h  Scene.cpp  Scene.h
src/ui/: IconButton.cpp  IconButton.h  ThemeButton.cpp  ThemeButton.h  Toolbar.cpp  Toolbar.h  UiDraw.h
tests/: shape_tests.cpp
